# CppND-System-Monitor-Project-Updated

./: .gitignore  CMakeLists.txt
include/: cpu_data.h  linux_parser.h  process.h  processor.h  system.h
src/: cpu_data.cpp  format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
tst/: CMakeLists.txt  format_tests.cpp  linux_helper.h  process_tests.cpp  processor_tests.cpp
